# fbnn

./: .dokx  CMakeLists.txt  LICENSE  PATENTS  README.md  docs.sh  index.html  init.c
_markdown/fbnn/: README.md  fbnn+CachingLookupTable.md  fbnn+ClassHierarchicalNLLCriterion.md  fbnn+ClassNLLCriterionWithUNK.md  fbnn+CrossMapNormalization.md  fbnn+Dropout.md  (+18 more)
fbnn/: CachingLookupTable.lua  ClassNLLCriterionWithUNK.lua  Constant.lua  DataSetLabelMe.lua  DifferenceOfGaussian.lua  Dropout.lua  FasterLookup.lua  IndividualDropout.lua  L2Normalize.lua  LaplacianOfGaussian.lua  LeakyReLU.lua  LinearNB.lua  LinearNoBackprop.lua  LocallyConnected.lua  NestedDropout.lua  NormalizedLinearNoBias.lua  Optim.lua  Probe.lua  ProjectiveGradientNormalization.lua  SegSparseLinear.lua  SoftPlusLSECriterion.lua  SoftPlusLSEMinusLSECriterion.lua  SparseConverter.lua  SparseKmax.lua  SparseLinear.lua  SparseLookupTable.lua  SparseSum.lua  SpatialFoveaCuda.lua  TemporalConvolutionTBC.lua  TrueNLLCriterion.lua  UnfoldedTemporalConvolution.lua  Upsample.lua  WeightedLookupTable.lua  fbnn+CachingLookupTable.html  fbnn+ClassHierarchicalNLLCriterion.html  fbnn+ClassNLLCriterionWithUNK.html  fbnn+CrossMapNormalization.html  fbnn+Dropout.html  fbnn+GroupKMaxPooling.html  fbnn+HSM.html  (+19 more)
rocks/: fbnn-scm-1.rockspec
src/: Blas.h  CrossMapNormalization.cpp  DataSetLabelMe.c  FasterLookup.c  GroupKMaxPooling.cpp  HSM.cpp  InitCPU.cpp  KMaxPooling.cpp  LocallyConnected.cpp  SparseLinear.c  SparseNLLCriterion.cpp  TemporalConvolutionTBC.cpp  Vml.h  WeightedLookupTable.cpp
test/: fb_test.lua
(+1 files in other folders)
